--- a/pt/web/alicorn/src/scss/_nav.scss
+++ b/pt/web/alicorn/src/scss/_nav.scss
@@ -187,6 +187,14 @@ button.control-search {
         display: none;
       }
     }
+
+    a.btn {
+      border-top-color: #666;
+      border-left-color: #666;
+      border-bottom-color: #000;
+      border-right-color: #000;
+      border-bottom-width: 2px;
+    }
   }
 }
 
