--- a/pt/web/alicorn/src/scss/app.scss
+++ b/pt/web/alicorn/src/scss/app.scss
@@ -255,6 +255,14 @@ img:-moz-loading {
     display: flex;
     align-items: center;
 
+    a.btn {
+      border-top-color: #666;
+      border-left-color: #666;
+      border-bottom-color: #000;
+      border-right-color: #000;
+      border-bottom-width: 2px;
+    }
+
     a.button-link {
       color: black;
 
